--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ harmony:
     url: http://www.dilettantitude.de
 
   # Google Analytics key, leave blank to ignore
-  google_analytics_key: UA-xxxx-x
+  google_analytics_key: UA-31071358-1 
 
   # Profile links, leave blank to ignore
   social: 
