--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,10 @@
 baseurl:
 
 # Site live URL
-url:
+
+url: http://www.dilettantitude.de
+name: Dilettantitude
+description: Hanging around, having a cigarette.
 
 # Localhost 
 # url: http://127.0.0.1:4000  
